# cargo-generate-templates

./: README.md
.github/workflows/: build.yml
http-client-template/: Cargo.toml  cargo-generate.toml
http-client-template/src/: error.rs  lib.rs
