[package]
name = "{{crate-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_path_to_error = "0.1.15"
serde_urlencoded = "0.7.1"
thiserror = "1.0.56"
time = { version = "0.3.34", features = ["parsing", "serde"] }
tracing = "0.1.40"
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
rand = "0.8.5"
wiremock = "0.6.0"
